--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-sketch</title>
+    <link rel="stylesheet" href="styles/main.css" />
 </head>
+
 <body>
-    Hellow
+    <h3>Etch-a-sketch</h3>
+    <h1>Draw something!</h1>
+    <div id="container">
+    </div>
+    <div id="controls">
+        <button id="reset" class="hidden" onclick="newBoard()">Size</button>
+        <button id="reset" class="hidden" onclick="reset()">Reset</button>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
